--- a/index.html
+++ b/index.html
@@ -1,34 +1,193 @@
-<!DOCTYPE HTML>
-	<html>
-	<title>baca aja cantikk</title>
-	<head>
-	<body bgcolor="black">
-	<link rel="icon" href="https://c.top4top.io/p_20852h7q50.jpg" type="image/x-icon">
-	<meta name="description" content="Sendiri,ngopi,and merenungi"> 
-	</head>
-    <link href="https://fonts.googl.eapis.com/css?family=Cuprum" rel="stylesheet">
-    <center>
-				<b><style type="text/css">
-  #highlight{font:bold 50px Impact,Arial,Sans-Serif;}
-</style>
-				<img src="https://i.top4top.io/p_2179k6ydl0.jpeg" alt="gambar patrick i love u" weight="600" height="600">
-                <p><h1 style="color:green">Terimakasih atas waktunya :)</h1></p>
-			<br>
-				<a><font color="white">~Keep Calm Bro~</font></a>
-				<br>
-				<script>
-  function play(){
-       var audio = document.getElementById("audio");
-       audio.play();
-                 }
-   </script>
-				<input type="button" value="ENJOY THE MUSIC"  onclick="play()">
-			    <audio id="audio" src="https://b.top4top.io/m_2121gh1j50.m4a"></audio>
-	<div id="clock" style="color: white; font-family: courier new;">
+<html>
+ <head>
+  <title>Hacked By Solo Defacer</title> 
+  <link rel="icon" href="https://j.top4top.io/p_2193tbumh0.png" type="image/x-icon">
+  <meta name="description" content="Sendiri,ngopi,and merenungi"> 
+ </head>
+ <body bgcolor="#F5F2F9"> 
+  <link href="https://fonts.googl.eapis.com/css?family=Cuprum" rel="stylesheet"> 
+  <style>
+
+  body {
+
+    background-color: black;
+
+  }
+
+  @keyframes shake {
+
+  0% { transform: translate(1px, 1px) rotate(0deg); }
+
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
+
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
+
+  30% { transform: translate(3px, 2px) rotate(0deg); }
+
+  40% { transform: translate(1px, -1px) rotate(1deg); }
+
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+
+}
+
+  .root{
+
+    animation: shake 1s;
+
+    animation-iteration-count: infinite;
+
+    font-family: 'Cuprum',cursive;
+
+    color: black;
+
+    font-size: 50px;
+
+  }
+
+  .coksc{
+
+    font-family: 'Cuprum',cursive;
+
+    color: black;
+
+    font-size: 18px;
+
+
+
+
+
+  }
+
+
+
+</style> 
+  <center> 
+   <img src="https://j.top4top.io/p_2193tbumh0.png" style="width:500px;">
+   <br> 
+   <hr> 
+   <div class="root">
+    <font color="white">-=Hacked by Solo Defacer=-</font>
+   </div>
+   <hr> 
+   <div class="coksc">
+    <font color="red" style="font-size:44px;">[!]</font>
+    <font color="white" style="font-size:44px;">N-07<font>
+    <font style="font-size:44px;" color="red">[!]</font>
+    <font style="font-size:38px;" color="white"><br><br>
+    <script language="JavaScript1.2">
+
+var message="Hallo Admin:)"
+
+var neonbasecolor="white"
+
+var neontextcolor="#fd3d3a"
+
+var neontextcolor2="#ff8080"
+
+var flashspeed=50
+
+var flashingletters=5
+
+var flashingletters2=1
+
+var flashpause=0
+
+var n=0
+
+if (document.all||document.getElementById){
+
+document.write('<font color="'+neonbasecolor+'">')
+
+for (m=0;m<message.length;m++)
+
+document.write('<span id="neonlight'+m+'">'+message.charAt(m)+'</span>')
+
+document.write('</font>')
+
+}
+
+else
+
+document.write(message)
+
+function crossref(number){
+
+var crossobj=document.all? eval("document.all.neonlight"+number) :
+document.getElementById("neonlight"+number)
+
+return crossobj
+
+}
+
+function neon(){
+
+//Change all letters to base color
+
+if (n==0){
+
+for (m=0;m<message.length;m++)
+
+crossref(m).style.color=neonbasecolor
+
+}
+
+//cycle through and change individual letters to neon color
+
+crossref(n).style.color=neontextcolor
+
+if (n>flashingletters-1) crossref(n-flashingletters).style.color=neontextcolor2
+
+if (n>(flashingletters+flashingletters2)-1) crossref(n-flashingletters-flashingletters2).style.color=neonbasecolor
+
+if (n<message.length-1)
+
+n++
+
+else{
+
+n=0
+
+clearInterval(flashing)
+
+setTimeout("beginneon()",flashpause)
+
+return
+
+}
+
+}
+
+function beginneon(){
+
+if (document.all||document.getElementById)
+
+flashing=setInterval("neon()",flashspeed)
+
+}
+
+beginneon()</script>
+<br>
+    <font color="white" size="6" style="color: white: font-family: courier new;"><br>!Solo Defacer!<br>Btw web anda vuln terhadap serangan deface<br>Thx to cupapi senpai</font>
+    <br>
+    <br>
+    <br>
+    <div id="clock" style="color: white; font-family: courier new;">
      04:41:57 AM
     </div> 
     <script type="text/javascript">
-    
+
+    <!--
+
     function showTime() {
 
         var a_p = "";
@@ -89,28 +248,12 @@
 
     setInterval(showTime, 500);
 
-	//popup teks biasa
-alert('halo')
-alert('jadi gini')
-alert('aku mau bilang')
+    //-->
 
-//pop up pertanyaan yes-no
-switch(confirm('dari dlu aku suka kamu,jadi... maukah kamu jadi pacarku?')){
-case true:
-alert('akhirnya diterimaa;)');
-alert('makasih udah nerima aku');
-alert('aku janji gabakal bikin kamu nyesel');
-break;
-case false:
-alert('ohhh oke ;)');
-alert('makasih udah jawab');
-alert('oke karena aku di tolak jadi... aku....');
-alert('pokoknya makasih dah mau jawab');
-alert('sekian dan terimakasih');
-alert('btw maaf dah ganggu waktunya');
-break;
-}
-</script>
-</center>
-	</body>
-	</html>
+    </script> 
+    <br> 
+    <font color="white" size="5">CopyRight <font color="red">Ã‚Â© <font color="white">By Magelang Blackhat</font></font></font>
+   </div>
+   <embed src="https://j.top4top.io/m_2091n3bk01.mp3" width="0" height="0" nojava="true" controls="ControlPanel" console="one"></font></font></font>
+ </body>
+</html>
