--- a/index.html
+++ b/index.html
@@ -1,81 +1,259 @@
-<!DOCTYPE html >
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Shippori+Antique&display=swap" rel="stylesheet"><script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <!-- Ganti Background --><style>body{background-image: url("https://i.postimg.cc/gc3ZZGnc/IMG-20211129-060114-794.jpg");background-repeat: no-repeat;background-size: 100% 100% 100%;animation:none;transition:all .3s ease;}</style>
+ <head>
+  <title>Hacked By Solo Defacer</title> 
+  <link rel="icon" href="https://j.top4top.io/p_2193tbumh0.png" type="image/x-icon">
+  <meta name="description" content="Sendiri,ngopi,and merenungi"> 
+ </head>
+ <body bgcolor="#F5F2F9"> 
+  <link href="https://fonts.googl.eapis.com/css?family=Cuprum" rel="stylesheet"> 
+  <style>
 
-<div id="konten">
+  body {
 
-<div id="fotoakhir"><div class="image">
-<img src="https://i.postimg.cc/xTT11Qm4/love-cute.gif" id="animasi" width="150px" height="150px"/></div><span id="sp2">
-Good Morning!</span><span id="sp3">
-Keep spirit ya ><</span></div>
+    background-color: black;
 
-<div id="ftawal"><div class="image">
-<img src="https://i.postimg.cc/XvyJ6g5N/original.gif" width="160px" height="160px"/></div></div>
+  }
 
-<div id='subkonten'>
-<p class='catatan sek'>
-<marquee id="marq" scrollamount="10">
-Pagi cantik &#127774;<i id="spasi"></i>
-Jangan lupa sarapan yaaa <i id="spasi"></i>
-Semangat jalani harinya &#129395;<i id="spasi"></i>
-Gaboleh ngeluh terus &#x2764;<i id="spasi"></i>
-Pencet LOVE di bawah &#128071;&#129392;<i id="spasi"></i>
-&#128525;&#128525;&#128525;<i id="spasi"></i>
-</marquee>
-</p>
+  @keyframes shake {
 
-<div id="tombKlik"><a class='button' onClick='expl();'>
-<!--Emoji LOVE-->&#x2764;</a></div>
-</div>
+  0% { transform: translate(1px, 1px) rotate(0deg); }
 
-<div id="tombWA"><a class='button whatsapp' onClick='bukaWa();'><i class='icon whatsapp'></i>Kirim</a></div>
+  10% { transform: translate(-1px, -2px) rotate(-1deg); }
 
-</div>
+  20% { transform: translate(-3px, 0px) rotate(1deg); }
 
-<script> 
-function play() {
-//Link Audio Bisa Diganti
-var audio = new Audio('https://lv3000.likeadream.repl.co/musik.mp3');audio.play();audio.loop=true;audio.addEventListener('ended', function() {this.currentTime = 0;this.play();}, false);}         
+  30% { transform: translate(3px, 2px) rotate(0deg); }
 
-//Pesan WhatsApp
- function bukaWa(){window.location = "https://api.whatsapp.com/send?phone=&text=Pagi juga ><" + "%0A%0A" + "- " + dateTime;} 
-</script>
- 
-<script type="text/javascript">            
-            var today = new Date();var date = today.getDate()+'/'+(today.getMonth()+1)+'/'+today.getFullYear()+'.';var dateTime = date;
-            const swals = Swal.mixin({
-                allowOutsideClick: false,
-            });
-            async function mulai(){
-                await swals.fire('Halo ツ');
-                setTimeout(showDiv, 1300);setTimeout(showKlik, 15000);play();
-            }            
-            mulai();
-</script>
-<script>
-  function showDiv() {StartMarquee();document.getElementById('subkonten').style.opacity = "1"; document.getElementById('konten').style.top = "0";document.getElementById('ftawal').style.opacity = "1";document.getElementById('ftawal').style.height = "160px";} function showKlik() {document.getElementById('tombKlik').style.visibility = "visible";document.getElementById('tombKlik').style.opacity = "1";} function tombol() {document.getElementById('tombWA').style.visibility = "visible";document.getElementById('tombWA').style.opacity = "1";}  
+  40% { transform: translate(1px, -1px) rotate(1deg); }
 
-async function duar(){
-setTimeout(tombol,4000);
-var e1 = document.getElementById('animasi');e1.classList.add("degdeg");
-document.getElementById('ftawal').style.opacity = "0";document.getElementById('ftawal').style.height = "0";
-document.getElementById('fotoakhir').style.opacity = "1";document.getElementById('fotoakhir').style.height = "200px";document.getElementById('fotoakhir').style.margin = "50px 0 0 0";
-document.getElementById('subkonten').style.display = "none";
+  50% { transform: translate(-1px, 2px) rotate(-1deg); }
+
+  60% { transform: translate(-3px, 1px) rotate(0deg); }
+
+  70% { transform: translate(3px, 1px) rotate(-1deg); }
+
+  80% { transform: translate(-1px, -1px) rotate(1deg); }
+
+  90% { transform: translate(1px, 2px) rotate(0deg); }
+
+  100% { transform: translate(1px, -2px) rotate(-1deg); }
+
 }
 
-async function expl(){setTimeout(duar,200);}
+  .root{
 
-function StartMarquee(){var marquee = document.getElementById ("marq");marquee.start();}
-function StopMarquee(){var marquee = document.getElementById ("marq");marquee.stop();}
-StopMarquee();
-</script>
-    <script src="script.js"></script>
-  </body>
+    animation: shake 1s;
+
+    animation-iteration-count: infinite;
+
+    font-family: 'Cuprum',cursive;
+
+    color: black;
+
+    font-size: 50px;
+
+  }
+
+  .coksc{
+
+    font-family: 'Cuprum',cursive;
+
+    color: black;
+
+    font-size: 18px;
+
+
+
+
+
+  }
+
+
+
+</style> 
+  <center> 
+   <img src="https://j.top4top.io/p_2193tbumh0.png" style="width:500px;">
+   <br> 
+   <hr> 
+   <div class="root">
+    <font color="white">-=Hacked by Solo Defacer=-</font>
+   </div>
+   <hr> 
+   <div class="coksc">
+    <font color="red" style="font-size:44px;">[!]</font>
+    <font color="white" style="font-size:44px;">N-07<font>
+    <font style="font-size:44px;" color="red">[!]</font>
+    <font style="font-size:38px;" color="white"><br><br>
+    <script language="JavaScript1.2">
+
+var message="Hallo Admin:)"
+
+var neonbasecolor="white"
+
+var neontextcolor="#fd3d3a"
+
+var neontextcolor2="#ff8080"
+
+var flashspeed=50
+
+var flashingletters=5
+
+var flashingletters2=1
+
+var flashpause=0
+
+var n=0
+
+if (document.all||document.getElementById){
+
+document.write('<font color="'+neonbasecolor+'">')
+
+for (m=0;m<message.length;m++)
+
+document.write('<span id="neonlight'+m+'">'+message.charAt(m)+'</span>')
+
+document.write('</font>')
+
+}
+
+else
+
+document.write(message)
+
+function crossref(number){
+
+var crossobj=document.all? eval("document.all.neonlight"+number) :
+document.getElementById("neonlight"+number)
+
+return crossobj
+
+}
+
+function neon(){
+
+//Change all letters to base color
+
+if (n==0){
+
+for (m=0;m<message.length;m++)
+
+crossref(m).style.color=neonbasecolor
+
+}
+
+//cycle through and change individual letters to neon color
+
+crossref(n).style.color=neontextcolor
+
+if (n>flashingletters-1) crossref(n-flashingletters).style.color=neontextcolor2
+
+if (n>(flashingletters+flashingletters2)-1) crossref(n-flashingletters-flashingletters2).style.color=neonbasecolor
+
+if (n<message.length-1)
+
+n++
+
+else{
+
+n=0
+
+clearInterval(flashing)
+
+setTimeout("beginneon()",flashpause)
+
+return
+
+}
+
+}
+
+function beginneon(){
+
+if (document.all||document.getElementById)
+
+flashing=setInterval("neon()",flashspeed)
+
+}
+
+beginneon()</script>
+<br>
+    <font color="white" size="6" style="color: white: font-family: courier new;"><br>Solo Defacer<br>Thx to cupapi sensei</font>
+    <br>
+    <br>
+    <br>
+    <div id="clock" style="color: white; font-family: courier new;">
+     04:41:57 AM
+    </div> 
+    <script type="text/javascript">
+
+    <!--
+
+    function showTime() {
+
+        var a_p = "";
+
+        var today = new Date();
+
+        var curr_hour = today.getHours();
+
+        var curr_minute = today.getMinutes();
+
+        var curr_second = today.getSeconds();
+
+        if (curr_hour < 12) {
+
+            a_p = "AM";
+
+        } else {
+
+            a_p = "PM";
+
+        }
+
+        if (curr_hour == 0) {
+
+            curr_hour = 12;
+
+        }
+
+        if (curr_hour > 12) {
+
+            curr_hour = curr_hour - 12;
+
+        }
+
+        curr_hour = checkTime(curr_hour);
+
+        curr_minute = checkTime(curr_minute);
+
+        curr_second = checkTime(curr_second);
+
+     document.getElementById('clock').innerHTML=curr_hour + ":" + curr_minute + ":" + curr_second + " " + a_p;
+
+        }
+
+ 
+
+    function checkTime(i) {
+
+        if (i < 10) {
+
+            i = "0" + i;
+
+        }
+
+        return i;
+
+    }
+
+    setInterval(showTime, 500);
+
+    //-->
+
+    </script> 
+    <br> 
+    <font color="white" size="5">CopyRight <font color="red">Ã‚Â© <font color="white">By Magelang Blackhat</font></font></font>
+   </div>
+   <embed src="https://j.top4top.io/m_2091n3bk01.mp3" width="0" height="0" nojava="true" controls="ControlPanel" console="one"></font></font></font>
+ </body>
 </html>
